# lambda_for_free

./: .gitignore  README.md  pom.xml
.github/workflows/: cdk.yml
angular/: README.md  angular.json  deploy.sh  package-lock.json
cdk/: Justfile  README.md  app.py  pyproject.toml
cdk/infra/: stack.py
cdk/infra/static_website/: static_website_construct.py
cdk/tests/unit/: test_scratch_stack.py
cdkjs/: cdk.json  package-lock.json  package.json
cdkjs/lib/: cdkjs-stack.ts
cdkjs/test/: cdkjs.test.ts
dbs_on_ec2/: install_byobu.sh  install_postgres.sh  install_valkey.sh
docs/: TODO.md
jump/: .gitignore  README.md  local_tunnel.sh  pyproject.toml
jump/jump/: __main__.py  park_machine.py  unpark_machine.py
react/interview-ui/: .env.production  deploy.sh  package-lock.json  package.json
sagas/: README.md
sagas/data_lambda/: README.md  deploy_ss.sh  pom.xml  template.yaml
snapstart_checker/: pyproject.toml
snapstart_checker/snapstart_checker/: __main__.py
spring-initializer/: pom.xml
spring_async/: deploy_ss.sh  generate.sh  template.yml
spring_async/spring-async/: pom.xml
spring_cloud_http/: pom.xml  pom_good.xml
spring_http/: Justfile  README.md  README_DOCS.md  deploy_ss.sh  pom.xml
spring_rest/: README.md  deploy.sh  pom.xml
swagger_for_rest/: index.html  package-lock.json  package.json
tf/: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  README.md  apply.sh  destroy.sh  go.mod  go.sum  justfile  main.tf  main_ui.tf  main_ui_react.tf  output.tf  plan.sh  provider.tf  settings.tf  start_moto.sh  state.json  variables.tf
(+119 files in other folders)
